--- a/frontend/src/pages/Logon/styles.css
+++ b/frontend/src/pages/Logon/styles.css
@@ -16,10 +16,14 @@
 }
 
 .logon-container section.form form {
-	margin-top: 100px;;
+	margin-top: 100px;
 }
 
 .logon-container section.form form h1 {
 	font-size: 32px;
 	margin-bottom: 32px;
+}
+
+.logon-container section.form form input {
+	margin-top: 8px;
 }
