--- a/frontend/src/pages/Loading/styles.css
+++ b/frontend/src/pages/Loading/styles.css
@@ -24,7 +24,7 @@
 .loading-container .content .message {
 	margin-top: 20px;
 	font-size: 24px;
-	color: #333;
+	color: #41414d;
 	font-weight: 700;
 	text-shadow: 0 2px 5px #dcdce6;
 }
