--- a/frontend/src/pages/Logon/styles.css
+++ b/frontend/src/pages/Logon/styles.css
@@ -27,3 +27,30 @@
 .logon-container section.form form input {
 	margin-top: 8px;
 }
+
+@media all and (max-width: 1200px) {	
+	.logon-container {
+		justify-content: center;
+	}
+}
+
+@media all and (max-width: 992px) {	
+	.logon-container section.form {
+		margin-right: 0;
+
+		display: flex;
+		flex-direction: column;
+	}
+	
+	.logon-container section.form form {
+		margin-top: 50px;
+
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.logon-container > img {
+		display: none;
+	}
+}
