--- a/frontend/src/pages/Register/styles.css
+++ b/frontend/src/pages/Register/styles.css
@@ -58,3 +58,28 @@
 .register-container .content form .input-group input + input {
 	margin-left: 8px;
 }
+
+@media all and (max-width: 992px) {	
+	.register-container {
+		display: unset;
+	}
+
+	.register-container .content {
+		flex-direction: column;
+		/* justify-content: center; */
+	}
+
+	.register-container .content section {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+	}	
+
+	.register-container .content section h1 {
+		margin-top: 50px;
+	}
+
+	.register-container .content form {
+		margin-top: 40px;
+	}
+}
