changed the new incident page to be responsive

--- a/frontend/src/pages/NewIncident/styles.css
+++ b/frontend/src/pages/NewIncident/styles.css
@@ -45,3 +45,28 @@
 .new-incident-container .content form textarea {
 	margin-top: 8px;
 }
+
+@media all and (max-width: 992px) {	
+	.new-incident-container {
+		display: unset;
+	}
+
+	.new-incident-container .content {
+		flex-direction: column;
+		/* justify-content: center; */
+	}
+
+	.new-incident-container .content section {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+	}	
+
+	.new-incident-container .content section h1 {
+		margin-top: 50px;
+	}
+
+	.new-incident-container .content form {
+		margin-top: 40px;
+	}
+}
